[package]
name = "openalex_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
flate2 = "1.0"
arrow = "53.0"
parquet = "53.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
indicatif = "0.17"
num_cpus = "1.0"
crossbeam = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
